--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
-    "name": "wiatrogon/allegro-rest-api",
+    "name": "shacky/allegro-rest-api",
     "description": "simple interface for Allegro REST API",
     "license": "MIT",
     "authors": [
         {
             "name": "Piotr Jakubik",
             "email": "wiatrogon@gmail.com"
+        },
+        {
+            "name": "Pawel Bukowski",
+            "email": "bukowski@crazyit.pl"
         }
     ],
     "keywords" : [
